--- a/BeanfunLogin/BeanfunLogin.csproj
+++ b/BeanfunLogin/BeanfunLogin.csproj
@@ -129,7 +129,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="App.config" />
+    <None Include="App.config">
+      <SubType>Designer</SubType>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="ms2.ico" />
